--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,10 @@ import Button from "../components/Button.astro";
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-3 col-span-2">Sooo....</Heading>
     <Text teksttype="Light" stylingclasses="col-start-3 col-span-8">October 18 is Instant Day - a day all about celebrating instant photography. So get out your Polaroid, Instax or whatever instant photography camera you are using, and show us your instants. Instant Day isn’t really a photo competition, it’s more a homage to good old analogue, instant photography - everybody who participates are winners:-) But: We do have a nice prize for one lucky instant photographer!</Text>
     </div>
+    <!-- knap der scroller ned til sektionen "coming soon" -->
+    <a href="#countdown">
+  <Button>save the date</Button>
+</a>
     <img src="/images/scroll_1.png" alt="Billede 1" 
        class="absolute w-36 lg:w-60 -left-20 bottom-20 rotate-12 filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110 intersect:animate-fade-right intersect:duration-3000">
     <img src="/images/scroll_13.jpg" alt="Billede 13" 
@@ -179,9 +183,8 @@ import Button from "../components/Button.astro";
   </form>
 </div>
 
-
 </section>
-<div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 pt-20">
+<div id="countdown" class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 pt-20">
  <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-3 col-span-8 text-center intersect:animate-fade-left intersect:duration-3000">Coming soon</Heading>
 </div>
 <section
